# ChangeLog for sys-apps/man-pages
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.107 2008/06/07 15:54:09 vapier Exp $

*man-pages-2.80 (07 Jun 2008)

  07 Jun 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.80.ebuild:
  Version bump.

*man-pages-2.79 (14 Mar 2008)

  14 Mar 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.79.ebuild:
  Version bump.

  10 Mar 2008; <ricmm@gentoo.org> man-pages-2.76.ebuild:
  Drop to ~mips due to unstable deps

*man-pages-2.78 (15 Feb 2008)

  15 Feb 2008; Doug Klima <cardoe@gentoo.org> +man-pages-2.78.ebuild:
  version bump

  19 Jan 2008; Mike Frysinger <vapier@gentoo.org> man-pages-2.75.ebuild,
  man-pages-2.76.ebuild:
  Stop installing TODO which no longer exists #206656 by Arfrever Frehtes
  Taifersar Arahesis.

*man-pages-2.76 (14 Jan 2008)

  14 Jan 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.76.ebuild:
  Version bump.

*man-pages-2.75 (10 Jan 2008)

  10 Jan 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.75.ebuild:
  Version bump.

  08 Dec 2007; Mike Frysinger <vapier@gentoo.org> man-pages-2.69.ebuild,
  man-pages-2.70.ebuild:
  Add TODO to dodoc while dropping HOWTOHELP #201609 by Arfrever Frehtes
  Taifersar Arahesis.

*man-pages-2.70 (06 Dec 2007)

  06 Dec 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.70.ebuild:
  Version bump.

*man-pages-2.69 (04 Dec 2007)

  04 Dec 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.69.ebuild:
  Version bump.

*man-pages-2.68 (28 Nov 2007)

  28 Nov 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.68.ebuild:
  Version bump.

*man-pages-2.67 (23 Oct 2007)

  23 Oct 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.67.ebuild:
  Version bump.

*man-pages-2.66 (08 Oct 2007)

  08 Oct 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.66.ebuild:
  Version bump.

*man-pages-2.65 (17 Sep 2007)
