@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/man-pages-2.80.ebuild,v 1.1 2008/06/07 15:54:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/man-pages-2.80.ebuild,v 1.2 2008/06/17 11:51:40 vapier Exp $
 
 EAPI="prefix"
 
